feat: add role-users apis
